# tmep

./: .functions_template.rst  .gitattributes  .python-version  .readthedocs.yml  .travis.yml  CHANGELOG.md  Justfile  MANIFEST.in  Makefile  README.rst  README_header.rst  README_template.rst  TODO.rst  _generate-readme.py  beetsdiff-func.sh  beetsdiff-tmpl.sh  description  index.rst  pyproject.toml  setup.cfg  setup.py  test.py  test_template.py  tox.ini
.github/workflows/: publish-to-pypi.yml  test.yml  tests.yml
doc/: conf.py  functions_template.rst
doc/source/: conf.py  functions.rst  functions_template.rst  index.rst  modules.rst  tmep.rst
docs/: Makefile  conf.py  functions.rst  index.rst  main-module.rst  modules.rst  requirements.txt  submodule-doc.rst  submodule-format.rst  submodule-functions.rst  submodule-template.rst
path-macrotemplate/: README.rst
path_macrotemplate/: __init__.py
src/tmep/: __init__.py  doc.py  functions.py  help.rst  template.py
test/: test_doc.py  test_format.py  test_functions.py  test_interface.py  test_template.py
tests/: test.py  test_doc.py  test_format.py  test_functions.py  test_interface.py  test_template.py
tmep/: __init__.py  _version.py  doc.py  doc.rst  format.py  func.py  functions.py  help.rst  template.py  tmpl.py  types.py
