[tool.poetry]
name = "tmep"
version = "3.0.0"
description = "Template engine for file paths. Expand variables like ``$title`` and apply functions like ``%upper{}``."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
repository = "https://github.com/Josef-Friedrich/tmep"

[tool.poetry.dependencies]
python = "^3.8"
Unidecode = "^1"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
mypy = "^1"
readme-patcher = "^0"
tox = "^4"
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tmep-doc = "tmep.doc:print_doc"

[[tool.readme_patcher.file]]
src = "README_template.rst"
dest = "README.rst"

[[tool.readme_patcher.file]]
src = ".functions_template.rst"
dest = "docs/functions.rst"

[tool.pyright]
reportPrivateUsage = false
reportUnusedExpression = false
reportInvalidStringEscapeSequence = false
