[project]
name = "tmep"
version = "3.0.0"
description = "Template engine for file paths. Expand variables like ``$title`` and apply functions like ``%upper{}``."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.8,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["Unidecode>=1.3.7,<2"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/tmep"

[project.scripts]
tmep-doc = "tmep.doc:print_doc"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "mypy>=1,<2",
    "readme-patcher>=0,<1",
    "tox>=4,<5",
    "ruff>=0,<1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.1.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.readme_patcher.file]]
src = "README_template.rst"
dest = "README.rst"

[[tool.readme_patcher.file]]
src = ".functions_template.rst"
dest = "docs/functions.rst"

[tool.pyright]
reportPrivateUsage = false
reportUnusedExpression = false
reportInvalidStringEscapeSequence = false
