[project]
name = "tmep"
version = "4.0.0"
description = "Template engine for file paths. Expand variables like ``$title`` and apply functions like ``%upper{}``."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/tmep"

[project.scripts]
tmep-doc = "tmep.doc:print_doc"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.readme_patcher.file]]
src = "README_template.rst"
dest = "README.rst"

[[tool.readme_patcher.file]]
src = ".functions_template.rst"
dest = "docs/functions.rst"

[tool.pyright]
reportPrivateUsage = false
reportUnusedExpression = false
reportInvalidStringEscapeSequence = false
